src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_text_confirm_replacement.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_BEGIN).to_span_lines(&ctx)
---
[
    Line::from(Span::from("src/model/item.rs").magenta()),
]
