src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_text_input_replacement_and_capture_pattern-2.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").dim(),
        Span::from("    "),
        Span::from("Item").red().crossed_out(),
        Span::from("(Item)").green(),
        Span::from("::new("),
        Span::from("rg_msg").red().crossed_out(),
        Span::from("rg_msg()").green(),
        Span::from(")"),
    ]),
]
