src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_text_selected-2.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_MATCH).to_span_lines(&ctx)
---
[
    Line::from_iter([
        Span::from("197:").yellow(),
        Span::from("    ").yellow(),
        Span::from("Item").black().on_yellow(),
        Span::from("::new(").yellow(),
        Span::from("rg_msg").black().on_red(),
        Span::from(")").yellow(),
    ]),
]
