src/ui/line/snapshots/rgr__ui__line__item__tests__to_span_lines_with_text_selected-4.snap
---
source: src/ui/line/item.rs
expression: new_item(RG_JSON_END).to_span_lines(&ctx)
---
[
    Spans(
        [
            Span {
                content: "",
                style: Style {
                    fg: None,
                    bg: None,
                    add_modifier: (empty),
                    sub_modifier: (empty),
                },
            },
        ],
    ),
]
